--- a/Embedded Content and APIs.html
+++ b/Embedded Content and APIs.html
@@ -8,7 +8,7 @@
 latest standard: <em>HTML5</em>
 <nav>
     <hr>
-    <a href="HTML.html">Main-Webpage</a> |
+    <a href="index.html">Main-Webpage</a> |
     <a href="HTML Basics.html">1. HTML Basics: Elements and Attributes</a> |
     <a href="Formatting and Style (CSS).html">2. HTML Formatting and Style(CSS)</a> |
     <a href="Tables and Input.html">3. HTML Tables and Input</a> |
@@ -2861,7 +2861,7 @@ latest standard: <em>HTML5</em>
 <hr>
 <footer>
     <nav>
-        <a href="HTML.html">Main-Webpage</a> |
+        <a href="index.html">Main-Webpage</a> |
         <a href="HTML Basics.html">1. HTML Basics: Elements and Attributes</a> |
         <a href="Formatting and Style (CSS).html">2. HTML Formatting and Style(CSS)</a> |
         <a href="Tables and Input.html">3. HTML Tables and Input</a> |
