--- a/HTML Basics.html
+++ b/HTML Basics.html
@@ -8,7 +8,7 @@
 the latest standard: <em>HTML5</em>
 <nav>
     <hr>
-    <a href="HTML.html">Main-Webpage</a> |
+    <a href="index.html">Main-Webpage</a> |
     <a href="HTML Basics.html">1. HTML Basics: Elements and Attributes</a> |
     <a href="Formatting and Style (CSS).html">2. HTML Formatting and Style(CSS)</a> |
     <a href="Tables and Input.html">3. HTML Tables and Input</a> |
@@ -41,7 +41,7 @@ the latest standard: <em>HTML5</em>
         HTML Elements</em>.
         Tags have to be nested, such that elements are all completely within each other, without
         overlapping
-        (such as in the <a target="_blank" href="HTML.html#sample_html">Sample HTML</a> on the
+        (such as in the <a target="_blank" href="index.html#sample_html">Sample HTML</a> on the
         site's <em>Main page</em>):
         <code>&lt;head> &lt;title>Page Tile&lt;/title> &lt;/head></code>
     </p>
@@ -719,7 +719,7 @@ the latest standard: <em>HTML5</em>
             It contains all the contents of an HTML document, such as <i>headings, paragraphs,
                 images, hyperlinks, tables, lists, etc</i>.
             There can only be one body element in an HTML document:
-            <i>See the <a target="_blank" href="HTML.html#sample_html">Sample HTML</a> example on
+            <i>See the <a target="_blank" href="index.html#sample_html">Sample HTML</a> example on
                 the sites Main webpage.</i>
 
         </p>
@@ -748,7 +748,7 @@ the latest standard: <em>HTML5</em>
 <hr>
 <footer>
     <nav>
-        <a href="HTML.html">Main-Webpage</a> |
+        <a href="index.html">Main-Webpage</a> |
         <a href="HTML Basics.html">1. HTML Basics: Elements and Attributes</a> |
         <a href="Formatting and Style (CSS).html">2. HTML Formatting and Style(CSS)</a> |
         <a href="Tables and Input.html">3. HTML Tables and Input</a> |
