Update Tables and Input.html

--- a/Tables and Input.html
+++ b/Tables and Input.html
@@ -8,7 +8,7 @@
 <em>HTML5</em>
 <nav>
     <hr>
-    <a href="HTML.html">Main-Webpage</a> |
+    <a href="index.html">Main-Webpage</a> |
     <a href="HTML Basics.html">1. HTML Basics: Elements and Attributes</a> |
     <a href="Formatting and Style (CSS).html">2. HTML Formatting and Style(CSS)</a> |
     <a href="Tables and Input.html">3. HTML Tables and Input</a> |
@@ -1892,7 +1892,7 @@
 <hr>
 <footer>
     <nav>
-        <a href="HTML.html">Main-Webpage</a> |
+        <a href="index.html">Main-Webpage</a> |
         <a href="HTML Basics.html">1. HTML Basics: Elements and Attributes</a> |
         <a href="Formatting and Style (CSS).html">2. HTML Formatting and Style(CSS)</a> |
         <a href="Tables and Input.html">3. HTML Tables and Input</a> |
